.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
23:38:40 **** Incremental Build of configuration Debug for project HW1 ****
make all 
Building file: ../src/HW1.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/HW1.d" -MT"src/HW1.d" -o "src/HW1.o" "../src/HW1.c"
../src/HW1.c: In function ‘main’:
../src/HW1.c:84:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
Finished building: ../src/HW1.c
 
Building target: HW1
Invoking: GCC C Linker
gcc  -o "HW1"  ./src/HW1.o   
Finished building target: HW1
 
23:38:43 **** Incremental Build of configuration Debug for project HW1 ****
make all 
make: Nothing to be done for `all'.
23:38:57 **** Incremental Build of configuration Debug for project HW1 ****
make all 
Building file: ../src/HW1.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/HW1.d" -MT"src/HW1.d" -o "src/HW1.o" "../src/HW1.c"
../src/HW1.c: In function ‘main’:
../src/HW1.c:39:2: error: expected ‘;’ before ‘FILE’
  FILE * input_file = fopen("environment.inp","r");
  ^
../src/HW1.c:42:12: error: ‘input_file’ undeclared (first use in this function)
     fscanf(input_file,"%d %d %d %d %f",&n,&d,&e,&R,&T);   // ilk 5 veriyi input dosyasindan okuyalim
            ^
../src/HW1.c:42:12: note: each undeclared identifier is reported only once for each function it appears in
../src/HW1.c:85:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
make: *** [src/HW1.o] Error 1
23:39:05 **** Incremental Build of configuration Debug for project HW1 ****
make all 
Building file: ../src/HW1.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/HW1.d" -MT"src/HW1.d" -o "src/HW1.o" "../src/HW1.c"
../src/HW1.c: In function ‘main’:
../src/HW1.c:85:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
Finished building: ../src/HW1.c
 
Building target: HW1
Invoking: GCC C Linker
gcc  -o "HW1"  ./src/HW1.o   
Finished building target: HW1
 
